@@ -1,6 +1,6 @@
 Package: betareg
 Version: 3.0-3
-Date: 2013-02-12
+Date: 2013-04-28
 Title: Beta Regression
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"),
              person(given = "Francisco", family = "Cribari-Neto", role = "aut", email = "cribari@ufpe.br"),
